# turbo-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  Doxyfile  LICENSE  README.md  main.cpp  vcpkg.json
.github/workflows/: build.yml
assets/docs/: doxy-boot.js  header.html
assets/docs/samples/: events.cpp
assets/scripts/: bob.lua  rotator.lua  spawner.lua  wasd_move.lua
docs/: _audio_8hpp.html  _audio_8hpp.js  _audio_8hpp__dep__incl.md5  _audio_8hpp_source.html  _circle_shape_8cpp.html  _circle_shape_8cpp__incl.md5  _circle_shape_8hpp.html  _circle_shape_8hpp.js  _circle_shape_8hpp__dep__incl.md5  _circle_shape_8hpp__incl.md5  _circle_shape_8hpp_source.html  _color_8hpp.html  _color_8hpp.js  _color_8hpp__dep__incl.md5  _color_8hpp_source.html  _component_8cpp.html  _component_8cpp__incl.md5  _component_8hpp.html  _component_8hpp.js  _component_8hpp__dep__incl.md5  _component_8hpp__incl.md5  _component_8hpp_source.html  _component_debug_8cpp.html  _component_debug_8hpp.html  _component_debug_8hpp.js  _component_debug_8hpp__incl.md5  _component_debug_8hpp_source.html  _debug_imgui_8hpp.html  _debug_imgui_8hpp.js  _debug_imgui_8hpp__dep__incl.md5  _debug_imgui_8hpp_source.html  _debug_window_8cpp.html  _debug_window_8hpp.html  _debug_window_8hpp.js  _debug_window_8hpp__dep__incl.md5  _debug_window_8hpp_source.html  _drawable_8hpp.html  _drawable_8hpp.js  _drawable_8hpp__dep__incl.md5  _drawable_8hpp_source.html  (+652 more)
docs/html/: _component_8hpp_source.html  _drawable_8hpp_source.html  _game_object_8hpp_source.html  _graphics_8hpp_source.html  _logger_8hpp_source.html  _rectangle_shape_8hpp_source.html  _scene_manager_8hpp_source.html  _shader_8hpp_source.html  _sprite_8hpp_source.html  _utils_8hpp_source.html  _vector2_8hpp_source.html  annotated.html  class_test_component.html  class_test_component__coll__graph.map  class_test_component__coll__graph.md5  class_test_component__inherit__graph.map  class_test_component__inherit__graph.md5  class_test_scene__coll__graph.md5  class_test_scene__inherit__graph.map  class_test_scene__inherit__graph.md5  classturbo_1_1_circle_shape-members.html  classturbo_1_1_circle_shape.html  classturbo_1_1_color.html  classturbo_1_1_component__coll__graph.md5  classturbo_1_1_component__inherit__graph.md5  classturbo_1_1_drawable-members.html  classturbo_1_1_drawable.html  classturbo_1_1_drawable__inherit__graph.map  classturbo_1_1_engine-members.html  classturbo_1_1_engine.html  classturbo_1_1_event-members.html  classturbo_1_1_event_handler.html  classturbo_1_1_font-members.html  classturbo_1_1_font.html  classturbo_1_1_game_object-members.html  classturbo_1_1_game_object__coll__graph.map  classturbo_1_1_game_object__coll__graph.md5  classturbo_1_1_input.html  classturbo_1_1_logger.html  classturbo_1_1_path.html  (+74 more)
docs/html/search/: all_0.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_5.js  classes_8.js  classes_9.js  functions_0.js  functions_1.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_d.js  functions_e.js  pages_0.js  variables_1.js  variables_7.js  variables_9.js
docs/latex/: annotated.tex  class_test_component.tex  class_test_component__coll__graph.md5  class_test_component__inherit__graph.md5  class_test_scene.tex  class_test_scene__coll__graph.md5  class_test_scene__inherit__graph.md5  classturbo_1_1_circle_shape.tex  classturbo_1_1_circle_shape__coll__graph.md5  classturbo_1_1_circle_shape__inherit__graph.md5  classturbo_1_1_color.tex  classturbo_1_1_component.tex  classturbo_1_1_component__coll__graph.md5  classturbo_1_1_component__inherit__graph.md5  classturbo_1_1_drawable.tex  classturbo_1_1_drawable__inherit__graph.md5  classturbo_1_1_engine.tex  classturbo_1_1_engine__coll__graph.md5  classturbo_1_1_event.tex  classturbo_1_1_event_handler.tex  classturbo_1_1_font.tex  classturbo_1_1_game_object.tex  classturbo_1_1_game_object__coll__graph.md5  classturbo_1_1_game_object__inherit__graph.md5  classturbo_1_1_input.tex  classturbo_1_1_logger.tex  classturbo_1_1_path.tex  classturbo_1_1_rectangle.tex  classturbo_1_1_rectangle_shape.tex  classturbo_1_1_rectangle_shape__coll__graph.md5  classturbo_1_1_rectangle_shape__inherit__graph.md5  classturbo_1_1_scene.tex  classturbo_1_1_scene__coll__graph.md5  classturbo_1_1_scene__inherit__graph.md5  classturbo_1_1_scene_manager.tex  classturbo_1_1_shader.tex  classturbo_1_1_shader__coll__graph.md5  classturbo_1_1_shape.tex  classturbo_1_1_shape__coll__graph.md5  classturbo_1_1_shape__inherit__graph.md5  (+19 more)
docs/search/: all_1.js  all_10.js  all_3.js  all_8.js  all_9.js  all_e.js  classes_2.js  classes_4.js  classes_6.js  classes_7.js  classes_a.js  classes_b.js  functions_2.js  functions_3.js  functions_a.js  functions_c.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_8.js
include/turbo/: Component.hpp  DebugImgui.hpp  Engine.hpp  Event.hpp  EventHandler.hpp  Font.hpp  GameObject.hpp  Input.hpp  Logger.hpp  Path.hpp  Rectangle.hpp  RotativeBuffer.hpp  Scene.hpp  SceneManager.hpp  Transform.hpp  Utils.hpp  Vector2.hpp  mainpage.dox
include/turbo/components/: SimpleControl.hpp
include/turbo/debug_menus/: ComponentDebug.hpp  DebugWindow.hpp  EngineDebug.hpp  GameObjectDebug.hpp  Inspector.hpp  SceneManagerDebug.hpp
include/turbo/editor/: Editor.hpp  Gizmo.hpp
src/: Component.cpp  Engine.cpp  Font.cpp  GameObject.cpp  Input.cpp  Path.cpp  Scene.cpp  SceneManager.cpp  Transform.cpp
src/components/: SimpleControl.cpp
src/debug_menus/: ComponentDebug.cpp  DebugWindow.cpp  EngineDebug.cpp  GameObjectDebug.cpp  SceneManagerDebug.cpp
src/editor/: Editor.cpp  Gizmo.cpp
src/graphics/: CircleShape.cpp  Material.cpp  RectangleShape.cpp  Shader.cpp  ShaderLibrary.cpp  Sprite.cpp  Text.cpp  Texture.cpp  Tileset.cpp
src/script/: LuaComponent.cpp  ScriptEngine.cpp
src/sound/: MusicStream.cpp  Sound.cpp
(+19 files in other folders)
